
  * Modified the monitor mechanism for mapping builtin functions names to
    address from being text based to being object based.  This speeds link
    time significantly.

  * Update version scheme for debian packaging to ww.xx.yy.zz format.
    Where:
        ww.xx - Maps to supported OpenCL specification version. Currently 1.1.
        yy    - TI release
        zz    - TI patch release

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Fri, 10 Apr 2015 15:38:44 -0500

ti-opencl (01.01.00.01-0ubuntu0~ppa1) trusty; urgency=medium

  * Make OpenCL use Resource Manager (RM) to allocate QMSS resources on the
    ARM side and pass to DSP for QMSS use.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Mon, 23 Mar 2015 16:04:26 -0500

ti-opencl (01.01.00.00-0ubuntu0~ppa3) trusty; urgency=medium

  * Fixed a C++ global objects destruction ordering problem that can cause
    segmentation fault at OpenCL application exit.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Thu, 05 Mar 2015 09:38:59 -0600

ti-opencl (01.01.00.00-0ubuntu0~ppa2) trusty; urgency=medium

  * Change use of QMSS resources to avoid conflicts with mpi.
  * Fix clocl issue where incorrect path was specified for the intermediate
    .bc file when clocl invoked the C6x compiler.
  * Added the -a/--alias option to clocl. This option must be enabled when the
    user creates overlapping buffers via USE_HOST_PTR on pointers pointing to
    an object allocated via __malloc_ddr or __malloc_msmc.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Wed, 04 Mar 2015 14:17:42 -0600

ti-opencl (01.01.00.00-0ubuntu0~ppa1) trusty; urgency=medium

  * Update version scheme for debian packaging to ww.xx.yy.zz format.
    Where:
        ww.xx - Maps to supported OpenCL specification version. Currently 1.1.
        yy    - TI release
        zz    - TI patch release

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Sun, 15 Feb 2015 13:21:14 -0600

ti-opencl (1.0.0-0ubuntu0~ppa3) trusty; urgency=medium
