@@ -10,6 +10,9 @@ ti-opencl (01.01.00.02-0ubuntu0~ppa1) trusty; urgency=medium
         yy    - TI release
         zz    - TI patch release
 
+  * Added signal handler in opencl to cleanup if user hits ctrl-c during 
+    OpenCL execution.
+
  -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Fri, 10 Apr 2015 15:38:44 -0500
 
 ti-opencl (01.01.00.01-0ubuntu0~ppa1) trusty; urgency=medium
